<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">nup</string>

  <string name="account">Account</string>
  <string name="account_description">Account used for authentication</string>
  <string name="album">Album</string>
  <string name="album_colon">Album:</string>
  <string name="albums">Albums</string>
  <string name="albums_cached">Albums (cached)</string>
  <string name="append">Append</string>
  <string name="append_all">Append all</string>
  <string name="appended_song_fmt">Appended \"%s\" to playlist.</string>
  <string name="artist">Artist</string>
  <string name="artist_colon">Artist:</string>
  <string name="artists">Artists</string>
  <string name="artists_cached">Artists (cached)</string>
  <string name="browse">Browse</string>
  <string name="browse_albums">Browse albums</string>
  <string name="browse_albums_fmt">Browse %s albums</string>
  <string name="browse_artists">Browse artists</string>
  <string name="browse_cached_albums">Browse cached albums</string>
  <string name="browse_cached_albums_fmt">Browse cached %s albums</string>
  <string name="browse_cached_artists">Browse cached artists</string>
  <string name="browse_cached_songs">Browse cached songs</string>
  <string name="browse_cached_songs_by_artist_fmt">Browse cached %s songs</string>
  <string name="browse_cached_songs_from_album_fmt">Browse cached songs from %s</string>
  <string name="browse_songs">Browse songs</string>
  <string name="browse_songs_by_artist_fmt">Browse %s songs</string>
  <string name="browse_songs_from_album_fmt">Browse songs from %s</string>
  <string name="browse_songs_with_75_rating">Browse songs &#x2265; 0.75</string>
  <string name="cache_is_empty">Cache is empty</string>
  <string name="cache_current_usage">Current usage: %.1f MB</string>
  <string name="cache_size">Cache size</string>
  <string name="cache_size_description">Maximum size of data stored on SD card in MB</string>
  <string name="cache_size_invalid">Cache must be at least %d MB.</string>
  <string name="cache_size_value">%d MB</string>
  <string name="cached">Cached</string>
  <string name="clear_cache">Clear cache</string>
  <string name="clear_cache_message">Delete all cached music from the SD card?</string>
  <string name="dont_download_all">Don\'t download all</string>
  <string name="download_all">Download all</string>
  <string name="download_rate">Download rate</string>
  <string name="download_rate_description">Maximum rate at which music can be downloaded in KB/sec (0 for unlimited)</string>
  <string name="download_rate_value">%d KB/sec</string>
  <string name="exit">Exit</string>
  <string name="insert">Insert</string>
  <string name="insert_all">Insert all</string>
  <string name="length_colon">Length:</string>
  <string name="loading">Loading...</string>
  <string name="loading_stats">Loading stats...</string>
  <string name="minimum_rating">Minimum rating</string>
  <string name="minimum_rating_label">Minimum rating:</string>
  <string name="network_is_unavailable">Network is unavailable.</string>
  <string name="next">Next</string>
  <string name="never_synced">Never synced</string>
  <string name="no_results">No results.</string>
  <string name="password">Password</string>
  <string name="pause">Pause</string>
  <string name="play">Play</string>
  <string name="prev">Prev</string>
  <string name="querying_database">Querying database.</string>
  <string name="rating_colon">Rating:</string>
  <string name="reset">Reset</string>
  <string name="remove_from_list">Remove from list</string>
  <string name="replace_all">Replace all</string>
  <string name="return_to_player">Return to player</string>
  <string name="search">Search</string>
  <string name="search_hint">Search songs</string>
  <string name="search_results">Search results</string>
  <string name="searching">Searching...</string>
  <string name="server_url">Server URL</string>
  <string name="server_url_description">Location of music server, e.g. \"https://www.example.org:1234/\".</string>
  <string name="settings">Settings</string>
  <string name="shuffle">Shuffle</string>
  <string name="syncing_song_list">Syncing song list</string>
  <string name="song_details_ellipsis">Song details...</string>
  <string name="songs_to_preload">Songs to preload</string>
  <string name="songs_to_preload_description">Number of songs to load in advance</string>
  <string name="startup_message">Service is running.</string>
  <string name="sync_progress_rebuilding_stats_tables">Rebuilding stats tables...</string>
  <string name="sync_song_list">Sync song list</string>
  <string name="sync_song_list_message">Sync the server\'s song list?</string>
  <string name="substring">Substring</string>
  <string name="title">Title</string>
  <string name="title_colon">Title:</string>
  <string name="toggle_pause">Toggle pause</string>
  <string name="track_colon">Track:</string>
  <string name="truncate_list">Truncate list</string>
  <string name="unlimited">Unlimited</string>
  <string name="username">Username</string>
  <string name="username_description">Used for HTTP basic authentication with the server.</string>

  <string-array name="min_rating_array">
    <item>0.00</item>
    <item>0.25</item>
    <item>0.50</item>
    <item>0.75</item>
    <item>1.00</item>
  </string-array>
</resources>
