<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item android:id="@+id/browse_menu_item"
        android:icon="@drawable/ic_add_circle_outline_white_24dp"
        android:title="@string/browse"
        android:showAsAction="ifRoom|withText" />
  <item android:id="@+id/search_menu_item"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        android:showAsAction="ifRoom|withText" />
  <item android:id="@+id/pause_menu_item"
        android:icon="@drawable/ic_pause_white_24dp"
        android:title="@string/pause" />
  <item android:id="@+id/download_all_menu_item"
        android:icon="@drawable/ic_cloud_download_white_24dp"
        android:title="@string/download_all" />
  <item android:id="@+id/settings_menu_item"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/settings"
        android:showAsAction="ifRoom|withText" />
  <item android:id="@+id/exit_menu_item"
        android:icon="@drawable/ic_close_white_24dp"
        android:title="@string/exit"
        android:showAsAction="ifRoom|withText" />
</menu>
