<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:shrinkColumns="1"
    android:padding="10dp"
    >
  <TableRow>
    <TextView
        android:paddingRight="7dp"
        android:gravity="right"
        android:textSize="16dp"
        android:text="@string/artist_colon"
        />
    <TextView
        android:id="@+id/artist"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="#fff"
        />
  </TableRow>

  <TableRow>
    <TextView
        android:paddingRight="7dp"
        android:gravity="right"
        android:textSize="16dp"
        android:singleLine="false"
        android:text="@string/title_colon"
        />
    <TextView
        android:id="@+id/title"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="#fff"
        />
  </TableRow>

  <TableRow>
    <TextView
        android:paddingRight="7dp"
        android:gravity="right"
        android:textSize="16dp"
        android:text="@string/album_colon"
        />
    <TextView
        android:id="@+id/album"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="#fff"
        />
  </TableRow>

  <TableRow>
    <TextView
        android:paddingRight="7dp"
        android:gravity="right"
        android:textSize="16dp"
        android:text="@string/track_colon"
        />
    <TextView
        android:id="@+id/track"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="#fff"
        />
  </TableRow>

  <TableRow>
    <TextView
        android:paddingRight="7dp"
        android:gravity="right"
        android:textSize="16dp"
        android:text="@string/length_colon"
        />
    <TextView
        android:id="@+id/length"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="#fff"
        />
  </TableRow>

  <TableRow>
    <TextView
        android:paddingRight="7dp"
        android:gravity="right"
        android:textSize="16dp"
        android:text="@string/rating_colon"
        />
    <TextView
        android:id="@+id/rating"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="#fff"
        />
  </TableRow>
</TableLayout>
