<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/grid1"
      >
    <Button
        android:id="@+id/append_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/append_all"
        android:textSize="@dimen/material_text_button"
        android:textStyle="bold"
        android:onClick="onAppendButtonClicked"
        />
    <Button
        android:id="@+id/insert_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/insert_all"
        android:textSize="@dimen/material_text_button"
        android:textStyle="bold"
        android:onClick="onInsertButtonClicked"
        />
    <Button
        android:id="@+id/replace_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/replace_all"
        android:textSize="@dimen/material_text_button"
        android:textStyle="bold"
        android:onClick="onReplaceButtonClicked"
        />
  </LinearLayout>

  <LinearLayout
      android:id="@+id/results_heading"
      android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      >
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:paddingLeft="@dimen/grid1"
        android:paddingRight="2dp"
        android:singleLine="true"
        android:text="@string/artist"
        android:textSize="@dimen/material_text_menu"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:singleLine="true"
        android:text="@string/title"
        android:textSize="@dimen/material_text_menu"
        android:textStyle="bold"
        />
  </LinearLayout>

  <ListView
      android:id="@+id/results"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:divider="@android:color/transparent"
      />
</LinearLayout>
